[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-tune"
version = "0.4.1"
description = "MLX-powered LLM fine-tuning for Apple Silicon - Unsloth-compatible API for Mac"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLX-Tune Contributors"}
]
keywords = ["llm", "fine-tuning", "mlx", "apple-silicon", "lora", "unsloth", "mac", "mlx-tune"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.23.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
    "ipython>=8.12.0",
]
vlm = [
    "mlx-vlm>=0.3.0",
]
train = [
    "trl>=0.7.0",
    "peft>=0.7.0",
    "wandb>=0.15.0",
]
all = [
    "mlx-tune[dev,train,vlm]",
]

[project.urls]
Homepage = "https://github.com/ARahim3/mlx-tune"
Documentation = "https://github.com/ARahim3/mlx-tune#readme"
Repository = "https://github.com/ARahim3/mlx-tune"
Issues = "https://github.com/ARahim3/mlx-tune/issues"

[tool.setuptools.packages.find]
include = ["mlx_tune*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mlx_tune --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (require network, slower)",
]
